[package]
name = "bubble_collapse"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
bevy_egui = "0.32.0"
rand_core = "0.6"
bevy_rand = { version = "0.8", features = ["rand_chacha", "wyrand"] }
bevy_framepace = "0.18.1"
winit = "0.30.8"
image = "0.25.5"

[build-dependencies]
embed-resource = "1.6.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
